simplify Jenkinsfile
Signed-off-by: Olivier Lamy <olamy@apache.org>